--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ ga_domain: auto               # 默认的是 auto, 可以改成自定义域名
 
 
 # Featured Tags
-featured-tags: true                     # 是否使用首页标签
+featured-tags: false                     # 是否使用首页标签
 featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
 
 
